增加无障碍辅助功能 增加欢迎页

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,13 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     lintOptions {
         // 设置为 true时lint将不报告分析的进度
